Migrated box_size to constants.py

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -17,12 +17,14 @@
     "\n",
     "Add Tnt destruct sequence\n",
     "\n",
-    "Add destruct animations\n"
+    "Add destruct animations\n",
+    "\n",
+    "Add protection box (and following sprite?)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,17 +33,6 @@
      "text": [
       "pygame 1.9.6\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c91f929419e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 220\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -55,13 +46,10 @@
     "from random import randint\n",
     "import copy\n",
     "from Player import Player\n",
-    "from Constants import G\n",
+    "from Constants import G, box_size\n",
     "from time import sleep\n",
     "\n",
-    "\n",
     "pygame.init()\n",
-    "\n",
-    "\n",
     "\n",
     "display_width = 1000\n",
     "display_height = 600\n",
@@ -74,9 +62,7 @@
     "\n",
     "clock = pygame.time.Clock()\n",
     "\n",
-    "\n",
     "bounce_vel = 6.0\n",
-    "\n",
     "\n",
     "R = 110\n",
     "N = 500\n",
@@ -90,16 +76,16 @@
     "p2 = Platform.Platform([900,550],[200,50])\n",
     "\n",
     "\n",
-    "a = Box.Metal(p1.pos - [-100,p1.size[1]+30])\n",
-    "a1 = Box.Metal(a.pos - [0,a.size[1]*2])\n",
-    "a3 = Box.Metal(a.pos - [0,a.size[1]*4])\n",
-    "a2 = Box.Metal(a.pos - [a.size[0]*2,0])\n",
+    "a = Box.Metal(p1.pos - [-100,p1.size[1]+box_size])\n",
+    "a1 = Box.Metal(a.pos - [0,box_size*2])\n",
+    "a3 = Box.Metal(a.pos - [0,box_size*4])\n",
+    "a2 = Box.Metal(a.pos - [box_size*2,0])\n",
     "\n",
-    "b2 = Box.Tnt(path[int(N/2)]-[0,a.size[1]+d1.size[1]])\n",
+    "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
     "b2.is_on(d2)\n",
-    "b3 = Box.Wood(path[int(N/2)]-[0,a.size[1]+d1.size[1]+a.size[1]*2])\n",
+    "b3 = Box.Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
     "b3.is_on(b2)\n",
-    "b4 = Box.Wood(path[int(N/2)]-[0,a.size[1]+d1.size[1]+a.size[1]*4])\n",
+    "b4 = Box.Wood(path[int(N/2)]-[0,box_size*5+d1.size[1]])\n",
     "b4.is_on(b3)\n",
     "#b1 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]])\n",
     "#b1.is_on(d1)\n",
