--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Add bounce boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
-    "Add destroy function (use counter) for all bodies. Maybe start with a shrink anim\n",
+    "Add destroy function (use counter) for all bodies. Maybe start with a shrink animation?\n",
     "Add Tnt destruct sequence\n",
     "\n",
     "Add destruct animations\n",
@@ -25,25 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:165: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-4d2c47ee7fab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -220,11 +217,12 @@
     "                \n",
     "                if bounce: \n",
     "                    character.vel[dim] = bounce_vel*side\n",
+    "                    character.is_off()\n",
     "                    \n",
     "                if break_box: # may not bounce once body slam comes into play\n",
-    "                    i.corporeal = False\n",
-    "                    #i.destruct() ##write this....\n",
-    "                    removal.append(i)\n",
+    "                    i.destroy()\n",
+    "                    character.is_off()\n",
+    "                   # removal.append(i)\n",
     "                 \n",
     "                if side == -1 and dim == 1 and not break_box and not bounce: \n",
     "                    character.is_on(i) # character above, colliding vertically, i is not broken, character not bouncing\n",
@@ -249,8 +247,8 @@
     "        crashed = True # dead!\n",
     "    \n",
     "    # remove destroyed objects\n",
-    "    for i in removal:\n",
-    "        body_list.remove(i)\n",
+    "   # for i in removal:\n",
+    "   #     body_list.remove(i)\n",
     "\n",
     "        \n",
     "    # Earthquake maker!\n",
