Only display objects that overlap with "screen" object

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -15,7 +15,6 @@
     "\n",
     "Add bounce boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
-    "Add destroy function (use counter) for all bodies. Maybe start with a shrink animation?\n",
     "Add Tnt destruct sequence\n",
     "\n",
     "Add destruct animations\n",
@@ -29,18 +28,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:165: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:167: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
      ]
     }
    ],
@@ -59,12 +50,14 @@
     "\n",
     "pygame.init()\n",
     "\n",
-    "display_width = 1000\n",
-    "display_height = 600\n",
+    "display_size = (1000,600)\n",
     "\n",
-    "gameDisplay = pygame.display.set_mode((display_width,display_height))\n",
+    "gameDisplay = pygame.display.set_mode(display_size)\n",
     "pygame.display.set_caption('Game!')\n",
     "\n",
+    "# Object to determine what to draw on screen\n",
+    "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
+    "        \n",
     "black = (0,0,0)\n",
     "white = (255,255,255)\n",
     "\n",
@@ -259,11 +252,13 @@
     "    \n",
     "    \n",
     "    gameDisplay.fill(white)\n",
-    "\n",
+    "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "    for bod in body_list+[character]:\n",
+    "        \n",
     "        if ticker>=0:\n",
     "            bod.visual_shift(shifts[ticker]-shifts[ticker+1])\n",
-    "        bod.draw(gameDisplay,[0,0])\n",
+    "        if screen.overlap(bod):\n",
+    "            bod.draw(gameDisplay,screen.pos)\n",
     "\n",
     "  #  sleep(0.1)\n",
     "    pygame.display.flip()\n",
