--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -24,14 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:167: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:172: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-701bf627405a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -85,9 +104,9 @@
     "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
     "b2.is_on(d2)\n",
     "b3 = Box.Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
-    "b3.is_on(b2)\n",
+    "b3.is_on(d2)\n",
     "b4 = Box.Wood(path[int(N/2)]-[0,box_size*5+d1.size[1]])\n",
-    "b4.is_on(b3)\n",
+    "b4.is_on(d2)\n",
     "#b1 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]])\n",
     "#b1.is_on(d1)\n",
     "#b4 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]+a.size[1]*2])\n",
@@ -122,7 +141,7 @@
     "while True:\n",
     "\n",
     "    ### THIS IS NEEDED OR IT WILL CRASH\n",
-    "\n",
+    "    jump_key = False\n",
     "    for event in pygame.event.get():\n",
     "\n",
     "        if event.type == pygame.KEYDOWN:\n",
@@ -140,9 +159,8 @@
     "                crouch_key = True\n",
     "        \n",
     "            elif event.key == pygame.K_x:\n",
-    "                character.jump()\n",
-    "                \n",
-    "                \n",
+    "                jump_key = True\n",
+    "   \n",
     "            elif event.key == pygame.K_q:\n",
     "                crashed = True\n",
     "                \n",
@@ -164,11 +182,7 @@
     "    if crashed:\n",
     "        character= Player([200,200])\n",
     "        crashed = False\n",
-    "        \n",
-    "    # Crouch if keys are pressed\n",
-    "    character.crouch(crouch_key)\n",
-    "    \n",
-    "\n",
+    "   \n",
     "    \n",
     "    \n",
     "    removal = [] # objects destroyed by player\n",
@@ -181,9 +195,19 @@
     "        bod.move()\n",
     "       \n",
     "        \n",
+    "        \n",
+    "   # character.move(right_key-left_key,crouch_key,jump_key)\n",
+    "    \n",
+    "    if jump_key:\n",
+    "        character.jump()\n",
+    "        \n",
     "    # Walk if keys are pressed\n",
     "    character.walk(right_key-left_key,down_key-up_key)\n",
-    "       \n",
+    "          \n",
+    "    # Crouch if keys are pressed\n",
+    "    character.crouch(crouch_key)\n",
+    "    \n",
+    "  \n",
     "    # accelerate character due to gravity\n",
     "    character.gravity()\n",
     "    character.move()\n",
@@ -198,7 +222,7 @@
     "            if dim>-1: # overlap!\n",
     "               # print(dim)\n",
     "                side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
-    "                break_box = dim == 1 and isinstance(i,Box.Wood) and converging\n",
+    "                break_box = (dim == 1 and isinstance(i,Box.Wood) and converging) or character.attacking\n",
     "                bounce = dim == 1 and isinstance(i,Box.Wood) and converging\n",
     "                converging = character.vel[dim]*side < 0 # if character is moving towards object\n",
     "\n",
@@ -210,11 +234,11 @@
     "                \n",
     "                if bounce: \n",
     "                    character.vel[dim] = bounce_vel*side\n",
-    "                    character.is_off()\n",
+    "                    if character.resting_on == i:\n",
+    "                        character.is_off()\n",
     "                    \n",
     "                if break_box: # may not bounce once body slam comes into play\n",
     "                    i.destroy()\n",
-    "                    character.is_off()\n",
     "                   # removal.append(i)\n",
     "                 \n",
     "                if side == -1 and dim == 1 and not break_box and not bounce: \n",
@@ -349,6 +373,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
