Sliding and character.evolve()
put jumping, gravity, crouching, sliding, walking, and crawling all in one function evolve().

Added sliding functionality.

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -7,8 +7,6 @@
     "To Do:\n",
     "\n",
     "\n",
-    "Add slide functionality (with jump bonus)\n",
-    "\n",
     "Add bellyflop functionality\n",
     "\n",
     "Add attack functionality (widen size for that)\n",
@@ -39,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:172: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:174: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
      ]
     },
     {
@@ -49,7 +47,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-701bf627405a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-a9ba9527e697>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 233\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    234\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    235\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -116,7 +114,7 @@
     "body_list = [p0,p1,p2,a,a1,a2,a3,d1,d2,b2,b3,b4]\n",
     "#shape_list = [Shape([(100,100),(20,200),(300,100)],(0,0,0),line_color = (100,0,0)),Shape([(500,100),(120,200),(700,100)],(100,0,100),line_color = (100,0,0))]\n",
     "\n",
-    "body_list += []\n",
+    "#body_list += []\n",
     "\n",
     "#body_list += [Box.Wood((150+k*85, 400)) for k in range(10)]\n",
     "#body_list[2].vel = np.array([1,-1])\n",
@@ -198,18 +196,20 @@
     "        \n",
     "   # character.move(right_key-left_key,crouch_key,jump_key)\n",
     "    \n",
-    "    if jump_key:\n",
-    "        character.jump()\n",
+    "  #  if jump_key:\n",
+    "       # character.jump()\n",
     "        \n",
     "    # Walk if keys are pressed\n",
-    "    character.walk(right_key-left_key,down_key-up_key)\n",
+    "   # character.walk(right_key-left_key,down_key-up_key)\n",
     "          \n",
     "    # Crouch if keys are pressed\n",
-    "    character.crouch(crouch_key)\n",
+    "    #character.crouch(crouch_key)\n",
     "    \n",
     "  \n",
     "    # accelerate character due to gravity\n",
-    "    character.gravity()\n",
+    "    #character.gravity()\n",
+    "    #move(self,run_key,crouch_key,jump_key)\n",
+    "    character.evolve(right_key-left_key,crouch_key,jump_key)\n",
     "    character.move()\n",
     "    \n",
     "    squeeze = [[False,False],[False,False]]\n",
@@ -344,20 +344,30 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = 1\n",
+    "S =float(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[], []]"
+       "1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "squeeze"
+    "S"
    ]
   },
   {
@@ -373,18 +383,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
