Scaling stable and nitro/on_me bug fixed
scaling is now stable, can resize entire shebang. also fixed on_me bug where two boxes could have character as on them, but character only has one. therefore one gets left when character leaves. fixed that by implementing a release in the main loop for non-contacting bodies.

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -9,8 +9,6 @@
     "\n",
     "Add bellyflop functionality\n",
     "\n",
-    "Add attack functionality (wider hit size than actual size)\n",
-    "\n",
     "Add bounce boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
     "Add Tnt destruct sequence\n",
@@ -41,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:180: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:191: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
      ]
     },
     {
@@ -51,7 +49,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-7ac2350a3fc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 239\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-041d3a0e7abd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 258\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    259\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    260\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcrashed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -66,7 +64,7 @@
     "from random import randint\n",
     "import copy\n",
     "from Player import Player\n",
-    "from Constants import G, box_size\n",
+    "from Constants import G, box_size, S\n",
     "from time import sleep\n",
     "\n",
     "pygame.init()\n",
@@ -81,27 +79,32 @@
     "        \n",
     "black = (0,0,0)\n",
     "white = (255,255,255)\n",
+    "floor = 500\n",
     "\n",
     "clock = pygame.time.Clock()\n",
     "\n",
-    "bounce_vel = 6.0\n",
+    "bounce_vel = 6.0*S\n",
     "\n",
     "R = box_size*4\n",
     "N = 600\n",
-    "path = [np.array([box_size*16.0 + R*math.cos(2*math.pi*x/N),box_size*16 + R*math.sin(2*math.pi*x/N)]) for x in range(N)]\n",
+    "path = [np.array([500*S + R*math.cos(2*math.pi*x/N),floor + R*math.sin(2*math.pi*x/N)]) for x in range(N)]\n",
     "d1 = Platform.Moving_Platform([box_size*2,box_size/3],copy.copy(path),color=(50,50,50),line_color = None ,line_width = 2)\n",
     "d2 = Platform.Moving_Platform([box_size*2,box_size/3],path[int(N/2):]+path[:int(N/2)],color=(50,50,50),line_color = (0,0,0) ,line_width = 2)\n",
     "\n",
-    "p0 = Platform.Platform(*[[500,480],[10,10]])\n",
+    "p0 = Platform.Platform(*[[500*S,floor],[10*S,10*S]])\n",
     "p0.solid = False\n",
-    "p1 = Platform.Platform([100,550],[200,50])\n",
-    "p2 = Platform.Platform([900,550],[200,50])\n",
+    "p0.corporeal = False\n",
+    "p1 = Platform.Platform([100*S,floor+50*S],[200*S,50*S])\n",
+    "p2 = Platform.Platform([900*S,floor+50*S],[200*S,50*S])\n",
     "\n",
     "\n",
-    "a = Box.Metal(p1.pos - [-100,p1.size[1]+box_size])\n",
+    "a = Box.Nitro(p1.pos - [-box_size*100/30,p1.size[1]+box_size])\n",
     "a1 = Box.Metal(a.pos - [0,box_size*2])\n",
-    "a3 = Box.Metal(a.pos - [0,box_size*4])\n",
-    "a2 = Box.Metal(a.pos - [box_size*2,0])\n",
+    "a1.is_on(a)\n",
+    "a3 = Box.Metal(a.pos - [box_size*2,box_size*2])\n",
+    "a3.is_off()\n",
+    "a2 = Box.Nitro(a.pos - [box_size*2,0])\n",
+    "a2.is_off()\n",
     "\n",
     "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
     "b2.is_on(d2)\n",
@@ -115,14 +118,15 @@
     "#b4.is_on(b1)\n",
     "\n",
     "\n",
-    "body_list = [p0,p1,p2,a,a1,a2,a3,d1,d2,b2,b3,b4]\n",
-    "#shape_list = [Shape([(100,100),(20,200),(300,100)],(0,0,0),line_color = (100,0,0)),Shape([(500,100),(120,200),(700,100)],(100,0,100),line_color = (100,0,0))]\n",
+    "master_body_list = [p1,p2,a,a1,a2,a3,d1,d2,b2,b3,b4]\n",
+    "background_list = [p0]\n",
     "\n",
-    "#body_list += []\n",
+    "for k in range(4):\n",
+    "    for i in range(3):\n",
+    "        master_body_list.append(Box.Wood(a.pos + [600*S+box_size*2*k,-i*2*box_size]))\n",
     "\n",
-    "#body_list += [Box.Wood((150+k*85, 400)) for k in range(10)]\n",
-    "#body_list[2].vel = np.array([1,-1])\n",
-    "\n",
+    "        \n",
+    "        \n",
     "ticker = -1\n",
     "\n",
     "shifts = [np.array([randint(-10,10)/5,randint(-10,10)/5]) for _ in range(5)]\n",
@@ -138,14 +142,18 @@
     "crouch_key = False\n",
     "attack_key = False\n",
     "\n",
-    "character = Player([600,400])\n",
     "relevant_one = None\n",
+    "character= Player([200*S,floor-300*S])\n",
+    "crashed = False\n",
+    "body_list = copy.deepcopy(master_body_list)\n",
+    "jump_timer = 0\n",
     "\n",
     "while True:\n",
     "\n",
-    "    ### THIS IS NEEDED OR IT WILL CRASH\n",
+    "    jump_timer -=1\n",
     "    jump_key = False\n",
-    "    for event in pygame.event.get():\n",
+    "    attack_key = False\n",
+    "    for event in pygame.event.get(): ### THIS IS NEEDED OR IT WILL CRASH\n",
     "\n",
     "        if event.type == pygame.KEYDOWN:\n",
     "            if event.key == pygame.K_LEFT:\n",
@@ -163,6 +171,7 @@
     "        \n",
     "            elif event.key == pygame.K_x:\n",
     "                jump_key = True\n",
+    "                jump_timer = 5\n",
     "            \n",
     "            elif event.key == pygame.K_z:\n",
     "                attack_key = True\n",
@@ -177,8 +186,6 @@
     "                right_key = False\n",
     "            elif event.key == pygame.K_c:\n",
     "                crouch_key = False\n",
-    "            elif event.key == pygame.K_z:\n",
-    "                attack_key = False\n",
     "            \n",
     "            elif event.key == pygame.K_UP:\n",
     "                up_key = False\n",
@@ -187,9 +194,7 @@
     "        ######################\n",
     "    \n",
     "    \n",
-    "    if crashed:\n",
-    "        character= Player([200,200])\n",
-    "        crashed = False\n",
+    "\n",
     "         \n",
     "\n",
     "    gameDisplay.fill(white)\n",
@@ -203,43 +208,75 @@
     "    character.move()\n",
     "    \n",
     "    squeeze = [[False,False],[False,False]]\n",
+    "    \n",
+    "    # sort body_list so that closest bodies interact first. \n",
+    "    # this prevents incorrect interactions like diagonally breaking boxes\n",
+    "    body_list = sorted(body_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
+    "       \n",
+    "\n",
     "   \n",
     "    for k,i in enumerate(body_list):\n",
     "       \n",
     "        if i.solid: # if corporeal object (not fruit)\n",
     "            dim,gap = character.overlap_dim(i)\n",
-    "            \n",
+    "            if isinstance(character.hit_box(),Body):\n",
+    "                hit = character.hit_box().overlap(i)\n",
+    "            else:\n",
+    "                hit = False\n",
+    "                \n",
     "            if dim>-1: # overlap!\n",
     "               # print(dim)\n",
     "                side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
-    "                break_box = isinstance(i,Box.Wood) and ((dim == 1 and converging) or character.attacking)\n",
-    "                bounce = dim == 1 and isinstance(i,Box.Wood) and converging\n",
     "                converging = character.vel[dim]*side < 0 # if character is moving towards object\n",
-    "\n",
-    "                squeeze[dim][(character.pos[dim] > i.pos[dim])] = True\n",
-    "                # remove overlap, reduce velocity in this dimension to 0\n",
-    "                character.pos[dim] += side*gap\n",
-    "                if converging: \n",
-    "                    character.vel[dim] = 0.0\n",
     "                \n",
-    "                if bounce: \n",
-    "                    character.vel[dim] = bounce_vel*side\n",
-    "                    if character.resting_on == i:\n",
-    "                        character.is_off()\n",
+    "                \n",
+    "                \n",
+    "                if isinstance(i,Box.Wood):\n",
+    "                    break_box = (dim == 1 and converging) or hit\n",
+    "                    bounce = dim == 1 and converging and (not hit)\n",
+    "                elif isinstance(i,Box.Nitro):\n",
+    "                    break_box = True\n",
+    "                    bounce = False\n",
+    "                elif isinstance(i,Box.Tnt):\n",
+    "                    break_box = hit\n",
+    "                    bounce = dim == 1 and converging and (not hit) # and not timer already started\n",
+    "                    # countdown_timer_start = (dim == 1 and converging) \n",
+    "                else:\n",
+    "                    break_box,bounce = False,False\n",
+    "                \n",
+    "                \n",
+    "                squeeze[dim][(character.pos[dim] > i.pos[dim])] = True\n",
+    "               \n",
+    "                if not break_box:  # remove overlap, reduce velocity in this dimension to 0\n",
+    "                    character.pos[dim] += side*gap\n",
+    "                    if converging: \n",
+    "                        character.vel[dim] = 0.0\n",
+    "                else:\n",
+    "                    if isinstance(i,Box.Nitro) or isinstance(i,Box.Wood):\n",
+    "                        i.destroy()\n",
+    "                    if isinstance(i,Box.Nitro) or isinstance(i,Box.Tnt):\n",
+    "                        crashed = True\n",
     "                    \n",
-    "                if break_box: # may not bounce once body slam comes into play\n",
-    "                    i.destroy()\n",
-    "                   # removal.append(i)\n",
+    "                if bounce: \n",
+    "                    character.bounce(jump_timer)\n",
+    "               \n",
     "                 \n",
     "                if side == -1 and dim == 1 and not break_box and not bounce: \n",
     "                    character.is_on(i) # character above, colliding vertically, i is not broken, character not bouncing\n",
     "                    relevant_one = i\n",
-    "           \n",
+    "                    \n",
+    "            elif hit: # if hit box overlap but no character overlap\n",
+    "                if isinstance(i,Box.Wood):\n",
+    "                    i.destroy()\n",
+    "                if isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
+    "                    i.destroy()\n",
+    "                    crashed = True\n",
     "            else:\n",
     "                if character.resting_on == i:\n",
     "                    character.vel += i.vel\n",
     "                    character.is_off() # not on anything no more\n",
-    "                \n",
+    "                if character in i.on_me:\n",
+    "                    i.on_me.remove(character)\n",
     "          \n",
     "        else: #non-corporeal, do not adjust velocity\n",
     "            pass\n",
@@ -253,7 +290,9 @@
     "    if any(all(i) for i in squeeze):\n",
     "        crashed = True # dead!\n",
     "    \n",
-    "\n",
+    "    # if character completely off screen, ded.\n",
+    "    if not screen.overlap(character):\n",
+    "        crashed = True #dead!\n",
     "\n",
     "        \n",
     "    # Earthquake maker!\n",
@@ -265,7 +304,7 @@
     "    \n",
     "    gameDisplay.fill(white)\n",
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
-    "    for bod in body_list+[character]:\n",
+    "    for bod in background_list+body_list+[character]:\n",
     "        \n",
     "        if ticker>=0:\n",
     "            bod.visual_shift(shifts[ticker]-shifts[ticker+1])\n",
@@ -274,6 +313,12 @@
     "\n",
     "  #  sleep(0.1)\n",
     "    pygame.display.flip()\n",
+    "    \n",
+    "    if crashed:\n",
+    "        character= Player([200*S,floor-300*S])\n",
+    "        crashed = False\n",
+    "        body_list = copy.deepcopy(master_body_list)\n",
+    "        relevant_one = None\n",
     "\n",
     "    \n",
     "pygame.quit()"
@@ -281,38 +326,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'pos': array([209.11831658, 239.55142787]), 'vel': array([0., 0.]), 'corporeal': True, 'solid': False, 'size': array([22.5 , 18.75]), 'transform': array([[1., 0.],\n",
-      "       [0., 1.]]), 'shapes': [<Super_Classes.Shape object at 0x1150d02b0>], 'cooldown': 0, 'resting_on': <Player.Player object at 0x1150c7fd0>, 'on_me': [], 'destruct_counter': -1}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "([<Box.Metal at 0x105ac4e10>], <Box.Nitro at 0x105ac4f60>)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "character.slide_box.info()"
+    "x = 2\n",
+    "master_body_list[x].on_me,master_body_list[x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'pos': array([809.11831658, 462.5       ]), 'vel': array([0., 0.]), 'corporeal': True, 'solid': True, 'size': array([22.5, 37.5]), 'transform': array([[1., 0.],\n",
-      "       [0., 1.]]), 'shapes': [<Super_Classes.Shape object at 0x114a57b00>], 'cooldown': 0, 'resting_on': <Platform.Platform object at 0x114e79c18>, 'on_me': [<Super_Classes.Body object at 0x1150d01d0>, <Super_Classes.Body object at 0x1150d0278>], 'destruct_counter': -1, 'crouching': False, 'sliding': 0, 'attacking': 0, 'attack_box': <Super_Classes.Body object at 0x1150d01d0>, 'slide_box': <Super_Classes.Body object at 0x1150d0278>}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "character.info()"
+    "character.resting_on.resting_on"
    ]
   },
   {
