--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -24,38 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:191: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-041d3a0e7abd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 258\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    259\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    260\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcrashed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:204: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
      ]
     }
    ],
    "source": [
     "import pygame\n",
+    "\n",
+    "pygame.init()\n",
+    "\n",
     "import math\n",
     "import Box\n",
     "import numpy as np\n",
@@ -66,8 +50,8 @@
     "from Player import Player\n",
     "from Constants import G, box_size, S\n",
     "from time import sleep\n",
+    "from Make_Sounds import wood_bounce_sound, wood_break_sound\n",
     "\n",
-    "pygame.init()\n",
     "\n",
     "display_size = (1000,600)\n",
     "\n",
@@ -101,14 +85,14 @@
     "a = Box.Nitro(p1.pos - [-box_size*100/30,p1.size[1]+box_size])\n",
     "a1 = Box.Metal(a.pos - [0,box_size*2])\n",
     "a1.is_on(a)\n",
-    "a3 = Box.Metal(a.pos - [box_size*2,box_size*2])\n",
+    "a3 = Box.Metal_Wood(a.pos - [box_size*2,box_size*2])\n",
     "a3.is_off()\n",
     "a2 = Box.Nitro(a.pos - [box_size*2,0])\n",
     "a2.is_off()\n",
     "\n",
     "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
     "b2.is_on(d2)\n",
-    "b3 = Box.Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
+    "b3 = Box.Bouncey_Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
     "b3.is_on(d2)\n",
     "b4 = Box.Wood(path[int(N/2)]-[0,box_size*5+d1.size[1]])\n",
     "b4.is_on(d2)\n",
@@ -120,6 +104,7 @@
     "\n",
     "master_body_list = [p1,p2,a,a1,a2,a3,d1,d2,b2,b3,b4]\n",
     "background_list = [p0]\n",
+    "foreground_list = [] # for exploding things, plus lives, score, etc\n",
     "\n",
     "for k in range(4):\n",
     "    for i in range(3):\n",
@@ -199,102 +184,112 @@
     "\n",
     "    gameDisplay.fill(white)\n",
     "\n",
+    "    # determine character's state and velocity\n",
+    "    character.evolve(right_key-left_key,crouch_key,jump_key,attack_key)\n",
+    "\n",
     "    # Move every object including the player\n",
     "    for bod in body_list:\n",
     "        bod.move()\n",
-    "       \n",
-    "       \n",
-    "    character.evolve(right_key-left_key,crouch_key,jump_key,attack_key)\n",
-    "    character.move()\n",
     "    \n",
-    "    squeeze = [[False,False],[False,False]]\n",
-    "    \n",
-    "    # sort body_list so that closest bodies interact first. \n",
-    "    # this prevents incorrect interactions like diagonally breaking boxes\n",
-    "    body_list = sorted(body_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
-    "       \n",
+    "    if not crashed:\n",
+    "        character.move()\n",
+    "        squeeze = [[False,False],[False,False]]\n",
     "\n",
-    "   \n",
-    "    for k,i in enumerate(body_list):\n",
-    "       \n",
-    "        if i.solid: # if corporeal object (not fruit)\n",
-    "            dim,gap = character.overlap_dim(i)\n",
-    "            if isinstance(character.hit_box(),Body):\n",
-    "                hit = character.hit_box().overlap(i)\n",
-    "            else:\n",
-    "                hit = False\n",
-    "                \n",
-    "            if dim>-1: # overlap!\n",
-    "               # print(dim)\n",
-    "                side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
-    "                converging = character.vel[dim]*side < 0 # if character is moving towards object\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                if isinstance(i,Box.Wood):\n",
-    "                    break_box = (dim == 1 and converging) or hit\n",
-    "                    bounce = dim == 1 and converging and (not hit)\n",
-    "                elif isinstance(i,Box.Nitro):\n",
-    "                    break_box = True\n",
-    "                    bounce = False\n",
-    "                elif isinstance(i,Box.Tnt):\n",
-    "                    break_box = hit\n",
-    "                    bounce = dim == 1 and converging and (not hit) # and not timer already started\n",
-    "                    # countdown_timer_start = (dim == 1 and converging) \n",
+    "        # sort body_list so that closest bodies interact first. \n",
+    "        # this prevents incorrect interactions like diagonally breaking boxes\n",
+    "        body_list = sorted(body_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        for k,i in enumerate(body_list):\n",
+    "\n",
+    "            if i.solid: # if corporeal object (not fruit)\n",
+    "                dim,gap = character.overlap_dim(i)\n",
+    "                if isinstance(character.hit_box(),Body):\n",
+    "                    hit = character.hit_box().overlap(i)\n",
     "                else:\n",
-    "                    break_box,bounce = False,False\n",
-    "                \n",
-    "                \n",
-    "                squeeze[dim][(character.pos[dim] > i.pos[dim])] = True\n",
-    "               \n",
-    "                if not break_box:  # remove overlap, reduce velocity in this dimension to 0\n",
-    "                    character.pos[dim] += side*gap\n",
-    "                    if converging: \n",
-    "                        character.vel[dim] = 0.0\n",
-    "                else:\n",
-    "                    if isinstance(i,Box.Nitro) or isinstance(i,Box.Wood):\n",
+    "                    hit = False\n",
+    "\n",
+    "                if dim>-1: # overlap!\n",
+    "                   # print(dim)\n",
+    "                    side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
+    "                    converging = character.vel[dim]*side < 0 # if character is moving towards object\n",
+    "\n",
+    "\n",
+    "                    if isinstance(i,Box.Wood):\n",
+    "                        bounce = (dim == 1) and converging and (not hit)\n",
+    "                        if bounce:\n",
+    "                            i.bounces -=1\n",
+    "                        break_box = (bounce and i.bounces == 0) or hit\n",
+    "                        if bounce and not break_box:\n",
+    "                            wood_bounce_sound()\n",
+    "\n",
+    "                        if break_box:\n",
+    "                            wood_break_sound()\n",
+    "\n",
+    "                    elif isinstance(i,Box.Nitro):\n",
+    "                        break_box = True\n",
+    "                        bounce = False\n",
+    "                    elif isinstance(i,Box.Tnt):\n",
+    "                        break_box = hit\n",
+    "                        bounce = dim == 1 and converging and (not hit) # and not timer already started\n",
+    "                        # countdown_timer_start = (dim == 1 and converging) \n",
+    "                    else:\n",
+    "                        break_box,bounce = False,False\n",
+    "\n",
+    "\n",
+    "                    if not break_box:  # record squeeze, remove overlap, reduce velocity in this dimension to 0\n",
+    "                        squeeze[dim][(character.pos[dim] > i.pos[dim])] = True\n",
+    "                        character.pos[dim] += side*gap\n",
+    "                        if converging: \n",
+    "                            character.vel[dim] = 0.0\n",
+    "                    else:\n",
     "                        i.destroy()\n",
-    "                    if isinstance(i,Box.Nitro) or isinstance(i,Box.Tnt):\n",
-    "                        crashed = True\n",
-    "                    \n",
-    "                if bounce: \n",
-    "                    character.bounce(jump_timer)\n",
-    "               \n",
-    "                 \n",
-    "                if side == -1 and dim == 1 and not break_box and not bounce: \n",
-    "                    character.is_on(i) # character above, colliding vertically, i is not broken, character not bouncing\n",
-    "                    relevant_one = i\n",
-    "                    \n",
-    "            elif hit: # if hit box overlap but no character overlap\n",
-    "                if isinstance(i,Box.Wood):\n",
-    "                    i.destroy()\n",
-    "                if isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
-    "                    i.destroy()\n",
-    "                    crashed = True\n",
-    "            else:\n",
-    "                if character.resting_on == i:\n",
-    "                    character.vel += i.vel\n",
-    "                    character.is_off() # not on anything no more\n",
-    "                if character in i.on_me:\n",
-    "                    i.on_me.remove(character)\n",
-    "          \n",
-    "        else: #non-corporeal, do not adjust velocity\n",
-    "            pass\n",
-    "           # if isinstance(i,Fruit):\n",
-    "           #     if character.overlap(i):\n",
-    "            #       #i.color = tuple([i*.98 for i in list(i.color)])\n",
-    "             #       removal.append(i)\n",
-    "              #      i.visible = False\n",
-    "       \n",
-    "    # overlaps on both sides for a given dimension, this should by design happen rarely\n",
-    "    if any(all(i) for i in squeeze):\n",
-    "        crashed = True # dead!\n",
-    "    \n",
-    "    # if character completely off screen, ded.\n",
-    "    if not screen.overlap(character):\n",
-    "        crashed = True #dead!\n",
+    "                        if isinstance(i,Box.Nitro) or isinstance(i,Box.Tnt):\n",
+    "                            crashed = True\n",
+    "                            body_list.remove(i)\n",
+    "                            foreground_list.append(i)\n",
     "\n",
-    "        \n",
+    "                    if bounce: \n",
+    "                        character.bounce(jump_timer,side)\n",
+    "\n",
+    "\n",
+    "                    if side == -1 and dim == 1 and not break_box and not bounce: \n",
+    "                        character.is_on(i) # character above, colliding vertically, i is not broken, character not bouncing\n",
+    "                        relevant_one = i\n",
+    "\n",
+    "                elif hit: # if hit box overlap but no character overlap\n",
+    "                    if isinstance(i,Box.Wood):\n",
+    "                        i.destroy()\n",
+    "                    if isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
+    "                        i.destroy()\n",
+    "                        crashed = True\n",
+    "                        body_list.remove(i)\n",
+    "                        foreground_list.append(i)\n",
+    "                else:\n",
+    "                    if character.resting_on == i:\n",
+    "                        character.vel += i.vel\n",
+    "                        character.is_off() # not on anything no more\n",
+    "                    if character in i.on_me:\n",
+    "                        i.on_me.remove(character)\n",
+    "\n",
+    "            else: #non-corporeal, do not adjust velocity\n",
+    "                pass\n",
+    "               # if isinstance(i,Fruit):\n",
+    "               #     if character.overlap(i):\n",
+    "                #       #i.color = tuple([i*.98 for i in list(i.color)])\n",
+    "                 #       removal.append(i)\n",
+    "                  #      i.visible = False\n",
+    "\n",
+    "        # overlaps on both sides for a given dimension, this should by design happen rarely\n",
+    "        if any(all(i) for i in squeeze):\n",
+    "            crashed = True # dead!\n",
+    "\n",
+    "        # if character completely off screen, ded.\n",
+    "        if not screen.overlap(character):\n",
+    "            crashed = True #dead!\n",
+    "\n",
+    "\n",
     "    # Earthquake maker!\n",
     "    if ticker == -1 and False:\n",
     "        ticker = len(shifts)-2  \n",
@@ -304,7 +299,15 @@
     "    \n",
     "    gameDisplay.fill(white)\n",
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
-    "    for bod in background_list+body_list+[character]:\n",
+    "    \n",
+    "   \n",
+    "    big_list = background_list+body_list\n",
+    "    if not crashed:\n",
+    "        big_list += [character]\n",
+    "        \n",
+    "    big_list += foreground_list\n",
+    "    \n",
+    "    for bod in big_list:\n",
     "        \n",
     "        if ticker>=0:\n",
     "            bod.visual_shift(shifts[ticker]-shifts[ticker+1])\n",
@@ -315,10 +318,14 @@
     "    pygame.display.flip()\n",
     "    \n",
     "    if crashed:\n",
-    "        character= Player([200*S,floor-300*S])\n",
-    "        crashed = False\n",
-    "        body_list = copy.deepcopy(master_body_list)\n",
-    "        relevant_one = None\n",
+    "        \n",
+    "        crashed += 1\n",
+    "        \n",
+    "        if crashed == 60:\n",
+    "            character= Player([200*S,floor-300*S])\n",
+    "            crashed = False\n",
+    "            body_list = copy.deepcopy(master_body_list)\n",
+    "            relevant_one = None\n",
     "\n",
     "    \n",
     "pygame.quit()"
@@ -326,20 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([<Box.Metal at 0x105ac4e10>], <Box.Nitro at 0x105ac4f60>)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2\n",
     "master_body_list[x].on_me,master_body_list[x]"
@@ -347,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,22 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S"
+    "type(True)"
    ]
   },
   {
