--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -19,7 +19,12 @@
     "\n",
     "Level saving\n",
     "\n",
-    "Game structure, saving, scores, etc.\n"
+    "Game structure, saving, scores, etc.\n",
+    "\n",
+    "\n",
+    "Credits:\n",
+    "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
+    "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
    ]
   },
   {
@@ -31,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:204: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:230: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
      ]
     }
    ],
@@ -50,7 +55,7 @@
     "from Player import Player\n",
     "from Constants import G, box_size, S\n",
     "from time import sleep\n",
-    "from Make_Sounds import wood_bounce_sound, wood_break_sound\n",
+    "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound\n",
     "\n",
     "\n",
     "display_size = (1000,600)\n",
@@ -58,9 +63,6 @@
     "gameDisplay = pygame.display.set_mode(display_size)\n",
     "pygame.display.set_caption('Game!')\n",
     "\n",
-    "# Object to determine what to draw on screen\n",
-    "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
-    "        \n",
     "black = (0,0,0)\n",
     "white = (255,255,255)\n",
     "floor = 500\n",
@@ -79,7 +81,7 @@
     "p0.solid = False\n",
     "p0.corporeal = False\n",
     "p1 = Platform.Platform([100*S,floor+50*S],[200*S,50*S])\n",
-    "p2 = Platform.Platform([900*S,floor+50*S],[200*S,50*S])\n",
+    "p2 = Platform.Platform([1000*S,floor+50*S],[300*S,50*S])\n",
     "\n",
     "\n",
     "a = Box.Nitro(p1.pos - [-box_size*100/30,p1.size[1]+box_size])\n",
@@ -109,8 +111,8 @@
     "for k in range(4):\n",
     "    for i in range(3):\n",
     "        master_body_list.append(Box.Wood(a.pos + [600*S+box_size*2*k,-i*2*box_size]))\n",
-    "\n",
-    "        \n",
+    "for i in [0,3.0]:\n",
+    "    master_body_list.append(Box.Bouncey_Wood(a.pos + [600*S+box_size*2*6,-i*2*box_size]))\n",
     "        \n",
     "ticker = -1\n",
     "\n",
@@ -125,19 +127,36 @@
     "up_key = False\n",
     "down_key = False\n",
     "crouch_key = False\n",
-    "attack_key = False\n",
+    "jump_hold = False\n",
     "\n",
     "relevant_one = None\n",
     "character= Player([200*S,floor-300*S])\n",
-    "crashed = False\n",
+    "\n",
+    "# Object to determine what to draw on screen\n",
+    "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
+    "    \n",
+    "death_delay = 60 # time after death level keeps tickin'\n",
+    "crashed = death_delay\n",
     "body_list = copy.deepcopy(master_body_list)\n",
     "jump_timer = 0\n",
     "\n",
     "while True:\n",
+    "    \n",
+    "    if crashed:\n",
+    "        \n",
+    "        if crashed == death_delay:\n",
+    "            character= Player([200*S,floor-300*S])\n",
+    "            crashed = False\n",
+    "            body_list = copy.deepcopy(master_body_list)\n",
+    "            relevant_one = None\n",
+    "        else:    \n",
+    "            crashed += 1\n",
     "\n",
     "    jump_timer -=1\n",
     "    jump_key = False\n",
     "    attack_key = False\n",
+    "    flop_key = False\n",
+    "    \n",
     "    for event in pygame.event.get(): ### THIS IS NEEDED OR IT WILL CRASH\n",
     "\n",
     "        if event.type == pygame.KEYDOWN:\n",
@@ -153,10 +172,12 @@
     "                \n",
     "            elif event.key == pygame.K_c:\n",
     "                crouch_key = True\n",
+    "                flop_key = True\n",
     "        \n",
     "            elif event.key == pygame.K_x:\n",
     "                jump_key = True\n",
-    "                jump_timer = 5\n",
+    "                jump_timer = character.jump_anticipation\n",
+    "                jump_hold = True\n",
     "            \n",
     "            elif event.key == pygame.K_z:\n",
     "                attack_key = True\n",
@@ -176,6 +197,9 @@
     "                up_key = False\n",
     "            elif event.key == pygame.K_DOWN:\n",
     "                down_key = False\n",
+    "            elif event.key == pygame.K_x:\n",
+    "                jump_hold = False\n",
+    "\n",
     "        ######################\n",
     "    \n",
     "    \n",
@@ -184,14 +208,15 @@
     "\n",
     "    gameDisplay.fill(white)\n",
     "\n",
-    "    # determine character's state and velocity\n",
-    "    character.evolve(right_key-left_key,crouch_key,jump_key,attack_key)\n",
-    "\n",
+    "    \n",
     "    # Move every object including the player\n",
     "    for bod in body_list:\n",
     "        bod.move()\n",
     "    \n",
     "    if not crashed:\n",
+    "        # determine character's state and velocity\n",
+    "        character.evolve(right_key-left_key,crouch_key,jump_key,attack_key,flop_key,jump_hold)\n",
+    "\n",
     "        character.move()\n",
     "        squeeze = [[False,False],[False,False]]\n",
     "\n",
@@ -226,6 +251,12 @@
     "\n",
     "                        if break_box:\n",
     "                            wood_break_sound()\n",
+    "                            \n",
+    "                    elif isinstance(i,Box.Metal_Wood):\n",
+    "                        bounce = False\n",
+    "                        break_box = character.flopping and hit\n",
+    "                        if break_box:\n",
+    "                            wood_break_sound()\n",
     "\n",
     "                    elif isinstance(i,Box.Nitro):\n",
     "                        break_box = True\n",
@@ -249,9 +280,13 @@
     "                            crashed = True\n",
     "                            body_list.remove(i)\n",
     "                            foreground_list.append(i)\n",
+    "                            boom_sound()\n",
+    "                      \n",
     "\n",
     "                    if bounce: \n",
-    "                        character.bounce(jump_timer,side)\n",
+    "                        if not (character.flopping>0) or not break_box: # if character is flopping and box breaks, no bounce\n",
+    "                            character.bounce(jump_timer*jump_hold,side) \n",
+    "                            # first input is jump was recently pressed and still held\n",
     "\n",
     "\n",
     "                    if side == -1 and dim == 1 and not break_box and not bounce: \n",
@@ -261,11 +296,18 @@
     "                elif hit: # if hit box overlap but no character overlap\n",
     "                    if isinstance(i,Box.Wood):\n",
     "                        i.destroy()\n",
-    "                    if isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
+    "                        wood_break_sound()\n",
+    "                    elif isinstance(i,Box.Metal_Wood):\n",
+    "                        if character.flopping>0:\n",
+    "                            i.destroy()\n",
+    "                            wood_break_sound()\n",
+    "                    elif isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
     "                        i.destroy()\n",
     "                        crashed = True\n",
     "                        body_list.remove(i)\n",
     "                        foreground_list.append(i)\n",
+    "                        boom_sound()\n",
+    "                        \n",
     "                else:\n",
     "                    if character.resting_on == i:\n",
     "                        character.vel += i.vel\n",
@@ -317,15 +359,6 @@
     "  #  sleep(0.1)\n",
     "    pygame.display.flip()\n",
     "    \n",
-    "    if crashed:\n",
-    "        \n",
-    "        crashed += 1\n",
-    "        \n",
-    "        if crashed == 60:\n",
-    "            character= Player([200*S,floor-300*S])\n",
-    "            crashed = False\n",
-    "            body_list = copy.deepcopy(master_body_list)\n",
-    "            relevant_one = None\n",
     "\n",
     "    \n",
     "pygame.quit()"
@@ -333,9 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'master_body_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-20e2992710e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmaster_body_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_me\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaster_body_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'master_body_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "master_body_list[x].on_me,master_body_list[x]"
@@ -361,30 +406,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "S = 1\n",
-    "S =float(S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bool"
+       "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "character.flopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "type(True)"
    ]
