--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -17,6 +17,9 @@
     "Game structure, saving, scores, etc.\n",
     "\n",
     "\n",
+    "Known bugs:\n",
+    "falling stacks of boxes ON a moving platform results in slight overlap\n",
+    "\n",
     "Credits:\n",
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
     "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
@@ -24,28 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:296: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-835f2872a749>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    382\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    383\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 384\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -64,39 +48,8 @@
     "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# Assigns all boxes a 'resting_on' platform or box based on what is below them\n",
-    "def settle_boxes(body_list):\n",
-    "    \n",
-    "    body_list = sorted(body_list,key = lambda x: x.pos[0]) # sort by x position\n",
-    "    \n",
-    "    for bod in body_list: # move all boxes (not resting on something) down slightly to find overlaps\n",
-    "        if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
-    "            bod.pos[1] += 1.0\n",
-    "            \n",
-    "    boxes_settling = True\n",
-    "    while boxes_settling:\n",
-    "        boxes_settling = False\n",
-    "\n",
-    "        for bod in body_list: # move all boxes down slightly to find overlaps\n",
-    "            if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
-    "                for bod2 in body_list:\n",
-    "                    if bod2.pos[1]>bod.pos[1]: # bod 2 is below\n",
-    "                        boxes_settling = boxes_settling or resolve_fall(bod,bod2)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    for bod in body_list:\n",
-    "        if isinstance(bod,Platform.Platform) and not isinstance(bod,Looper): # find a nearby stationary point\n",
-    "            rest_body = bod\n",
-    "        if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
-    "            bod.pos[1] -= 1.0\n",
-    "            bod.is_on(rest_body)\n",
-    "            \n",
     "                    \n",
-    "                    \n",
-    "def resolve_fall(bod,bod2):\n",
+    "def resolve_fall(bod,bod2): #resolving fall for non-character objects\n",
     "    if bod2.solid and bod2.pos[1]>bod.pos[1]: # bod 2 is below and solid\n",
     "        dim,gap = bod.overlap_dim(bod2)\n",
     "        if dim == 1 and gap>0.1:# bod2 is overlapping vertically\n",
@@ -104,15 +57,6 @@
     "            bod.pos[1] -= gap #shift bod up!\n",
     "            return True # solved!\n",
     "    return False\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -137,54 +81,39 @@
     "path = [np.array([500*S + R*math.cos(2*math.pi*x/N),floor + R*math.sin(2*math.pi*x/N)]) for x in range(N)]\n",
     "d1 = Platform.Moving_Platform([box_size*2,box_size/3],copy.copy(path),color=(50,50,50),line_color = None ,line_width = 2)\n",
     "d2 = Platform.Moving_Platform([box_size*2,box_size/3],path[int(N/2):]+path[:int(N/2)],color=(50,50,50),line_color = (0,0,0) ,line_width = 2)\n",
+    "p1 = Platform.Platform([100*S,floor+50*S],[200*S,50*S])\n",
+    "p2 = Platform.Platform([1000*S,floor+50*S],[300*S,50*S])\n",
     "\n",
     "p0 = Platform.Platform(*[[500*S,floor],[10*S,10*S]])\n",
     "p0.solid = False\n",
     "p0.corporeal = False\n",
-    "p1 = Platform.Platform([100*S,floor+50*S],[200*S,50*S])\n",
-    "p2 = Platform.Platform([1000*S,floor+50*S],[300*S,50*S])\n",
-    "\n",
     "\n",
     "a = Box.Nitro(p1.pos - [-box_size*100/30,p1.size[1]+box_size])\n",
     "a1 = Box.Metal(a.pos - [0,box_size*2])\n",
-    "\n",
     "a2 = Box.Nitro(a.pos - [box_size*2,0])\n",
     "a3 = Box.Metal_Wood(a.pos - [box_size*2,box_size*2])\n",
-    "\n",
-    "\n",
-    "\n",
-    "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
-    "\n",
-    "b3 = Box.Bouncey_Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
-    "\n",
+    "b2 = Box.Bouncey_Wood(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
+    "b3 = Box.Metal_Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
     "b4 = Box.Wood(path[int(N/2)]-[0,box_size*5+d1.size[1]])\n",
     "\n",
-    "#b1 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]])\n",
-    "#b1.is_on(d1)\n",
-    "#b4 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]+a.size[1]*2])\n",
-    "#b4.is_on(b1)\n",
     "\n",
-    "\n",
-    "master_body_list = [p1,p2,a,a1,a2,a3,d1,d2,b2,b3,b4]\n",
+    "master_platform_list = [p1,p2,d1,d2]\n",
+    "master_box_list = [a,a1,a2,a3,b2,b3,b4]\n",
     "background_list = [p0]\n",
     "foreground_list = [] # for exploding things, plus lives, score, etc\n",
     "\n",
     "for k in range(4):\n",
     "    for i in range(3):\n",
-    "        master_body_list.append(Box.Wood(a.pos + [600*S+box_size*2*k,-i*2*box_size]))\n",
+    "        master_box_list.append(Box.Wood(a.pos + [600*S+box_size*2*k,-i*2*box_size]))\n",
     "for i in [0,3.0]:\n",
-    "    master_body_list.append(Box.Bouncey_Wood(a.pos + [600*S+box_size*2*6,-i*2*box_size]))\n",
-    "        \n",
+    "    master_box_list.append(Box.Bouncey_Wood(a.pos + [600*S+box_size*2*6,-(i+1)*2*box_size]))\n",
+    "    master_box_list[-1].floating = True  \n",
     "ticker = -1\n",
     "\n",
     "shifts = [np.array([randint(-10,10)/5,randint(-10,10)/5]) for _ in range(5)]\n",
     "shifts.append(np.array([0,0]))\n",
     "\n",
     "     \n",
-    "\n",
-    "settle_boxes(master_body_list)\n",
-    "        \n",
-    "\n",
     "\n",
     "crashed = False     \n",
     "            \n",
@@ -203,7 +132,8 @@
     "    \n",
     "death_delay = 60 # time after death level keeps tickin'\n",
     "crashed = death_delay\n",
-    "body_list = copy.deepcopy(master_body_list)\n",
+    "box_list = copy.deepcopy(master_box_list)\n",
+    "platform_list = copy.deepcopy(master_platform_list)\n",
     "jump_timer = 0\n",
     "\n",
     "while True:\n",
@@ -213,7 +143,8 @@
     "        if crashed == death_delay:\n",
     "            character= Player([200*S,floor-300*S])\n",
     "            crashed = False\n",
-    "            body_list = copy.deepcopy(master_body_list)\n",
+    "            box_list = copy.deepcopy(master_box_list)\n",
+    "            platform_list = copy.deepcopy(master_platform_list)\n",
     "            relevant_one = None\n",
     "        else:    \n",
     "            crashed += 1\n",
@@ -275,30 +206,34 @@
     "    gameDisplay.fill(white)\n",
     "\n",
     "    \n",
-    "    # Move every object including the player\n",
-    "    for bod in body_list:\n",
+    "    # Move every non-player object\n",
+    "    for bod in box_list:\n",
     "        bod.move()\n",
-    "        if isinstance(bod,Box.Box) and bod.vel[1] >0:\n",
-    "            for bod2 in body_list:\n",
+    "        if bod.vel[1] >0:\n",
+    "            for bod2 in box_list+platform_list:\n",
     "                if resolve_fall(bod,bod2):\n",
     "                    if not isinstance(bod2,Box.Box) or bod2.vel[1] == 0:\n",
     "                        bod.vel[1] = 0\n",
     "                        break\n",
+    "                        \n",
+    "    for bod in platform_list:\n",
+    "        bod.move()\n",
     "    \n",
-    "    if not crashed:\n",
+    "    if not crashed: # if character is dead, don't bother with this stuff until it's regenerated\n",
+    "        \n",
     "        # determine character's state and velocity\n",
     "        character.evolve(right_key-left_key,crouch_key,jump_key,attack_key,flop_key,jump_hold)\n",
     "\n",
     "        character.move()\n",
     "        squeeze = [[False,False],[False,False]]\n",
     "        \n",
-    "        # sort body_list so that closest bodies interact first. \n",
+    "        # sort box_list so that closest bodies interact first. \n",
     "        # this prevents incorrect interactions like diagonally breaking boxes\n",
-    "        body_list = sorted(body_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
+    "        box_list = sorted(box_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
     "\n",
     "\n",
     "\n",
-    "        for k,i in enumerate(body_list):\n",
+    "        for k,i in enumerate(box_list+platform_list):\n",
     "\n",
     "            if i.solid: # if corporeal object (not fruit)\n",
     "                dim,gap = character.overlap_dim(i)\n",
@@ -317,8 +252,10 @@
     "                        bounce = (dim == 1) and converging and (not hit)\n",
     "                        if bounce:\n",
     "                            i.bounces -=1\n",
-    "                        break_box = (bounce and i.bounces == 0) or hit \n",
+    "                        break_box = (bounce and (i.bounces == 0 or i.vel[1]>0)) or hit # falling bouncy boxes break\n",
     "                        if bounce and not break_box:\n",
+    "                            if isinstance(character.resting_on,Body):\n",
+    "                                break_box = True\n",
     "                            wood_bounce_sound()\n",
     "\n",
     "                        if break_box:\n",
@@ -351,7 +288,7 @@
     "                        i.destroy()\n",
     "                        if isinstance(i,Box.Nitro) or isinstance(i,Box.Tnt):\n",
     "                            crashed = True\n",
-    "                            body_list.remove(i)\n",
+    "                            box_list.remove(i)\n",
     "                            foreground_list.append(i)\n",
     "                            boom_sound()\n",
     "                      \n",
@@ -377,7 +314,7 @@
     "                    elif isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
     "                        i.destroy()\n",
     "                        crashed = True\n",
-    "                        body_list.remove(i)\n",
+    "                        box_list.remove(i)\n",
     "                        foreground_list.append(i)\n",
     "                        boom_sound()\n",
     "                        \n",
@@ -416,7 +353,7 @@
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "    \n",
     "   \n",
-    "    big_list = background_list+body_list\n",
+    "    big_list = background_list+platform_list+box_list\n",
     "    if not crashed:\n",
     "        big_list += [character]\n",
     "        \n",
@@ -467,31 +404,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "[<Platform.Platform at 0x10f243c18>,\n",
+       " <Platform.Platform at 0x10f227668>,\n",
+       " <Platform.Moving_Platform at 0x10f241e48>,\n",
+       " <Platform.Moving_Platform at 0x1045da208>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "character.flopping"
+    "platform_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Box.Bouncey_Wood at 0x1045da320>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(True)"
+    "platform_list[3].on_me"
    ]
   },
   {
@@ -507,6 +458,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
